--- a/chintamani.html
+++ b/chintamani.html
@@ -31,7 +31,7 @@
 <section class="py-5">
     <div class="container">
         <h2 class="text-center">Chintamani Chinchpokali, Mumbai</h2>
-        <img src="d2.jpg" class="img-fluid mb-4" alt="Lalbaugcha Raja" width="1000px" height="400px">
+        <img src="image/d2.jpg" class="img-fluid mb-4" alt="Lalbaugcha Raja" width="1000px" height="400px">
         <p>The Chinchpoklicha Chintamani sits comfortably in a nook under the Chinchpokli flyover. During the 10 days of Ganesh Chaturthi, its resilience will be tested further, as lakhs of devotees cram the small lanes leading up to it.
 
             In 1920, a group of 20 to 25 men got together to start the Chinchpokli Sarvajanik Utsav Mandal . “In the initial years, Chintamani covered the area from Byculla to Sewri. The idol, however, was much smaller, just two to three feet in height,” says Vasudeo Savant, secretary of the committee. The Chintamani now sits on a throne and is about 23 feet high.
