--- a/dagdusheth-ganapati.html
+++ b/dagdusheth-ganapati.html
@@ -31,7 +31,7 @@
 <section class="py-5">
     <div class="container">
         <h2 class="text-center">Dagdusheth Ganapati, Pune</h2>
-        <img src="d2.jpg" class="img-fluid mb-4" alt="Lalbaugcha Raja" width="1000px" height="400px">
+        <img src="image/d2.jpg" class="img-fluid mb-4" alt="Lalbaugcha Raja" width="1000px" height="400px">
         <p>While Dagdusheth Ganpati may not have made it to the list of 'five Manache Ganpati', it still is one of the most famous Ganpati mandals in town. Established in 1893 by the Halwai family in memory of their son, the pandal's centrepiece is the awe-inspiring Ganpati idol adorned with opulent jewellery and ornaments. During the 10-day Ganesh Festival, the trust associated with the Mandal goes all out with larger-than-life art installations, lighting, folk music shows, and more. It is definitely one to watch out for. </p>
     </div>
 </section>
