--- a/lalbaugcha-raja.html
+++ b/lalbaugcha-raja.html
@@ -33,7 +33,7 @@
 <section class="py-5">
     <div class="container">
         <h2 class="text-center">Lalbaugcha Raja, Mumbai</h2>
-        <img src="lalbag1.jpg" class="img-fluid mb-4" alt="Lalbaugcha Raja" height="500px" width="1000px">
+        <img src="image/lalbag1.jpg" class="img-fluid mb-4" alt="Lalbaugcha Raja" height="500px" width="1000px">
         <p>Lalbaugcha Raja is one of the most iconic and celebrated Ganapati idols in Mumbai. The mandal, established in 1934, draws millions of devotees from across the world every year during Ganesh Chaturthi. It is known for fulfilling the wishes of its devotees and is worshipped with great fervor and devotion.</p>
     </div>
 </section>
