--- a/tulsibag_ganpati.html
+++ b/tulsibag_ganpati.html
@@ -31,7 +31,7 @@
 <section class="py-5">
     <div class="container">
         <h2 class="text-center">Tulsibaug Ganapati, Pune</h2>
-        <img src="tulsibag_ganpati.png" class="img-fluid mb-4" alt="Tulsibaug Ganapati, Pune" width="1000px" height="400px">
+        <img src="image/tulsibag_ganpati.png" class="img-fluid mb-4" alt="Tulsibaug Ganapati, Pune" width="1000px" height="400px">
         <p>
             In the crowded Tulsi Baug market of Pune city, Shri Ganpati Temple is located around the shops. There is a huge 14 feet Shri Ganesh Murti in the temple. In the temple, the feet of Shri Vinayak seems to be the most beautiful and together with a decorated appearance of Mushakraj looks even more elegant.In the crowded Tulsi Baug market of Pune city, Shri Ganpati Temple is located around the shops. There is a huge 14 feet Shri Ganesh Murti in the temple. In the temple, the feet of Shri Vinayak seems to be the most beautiful and together with a decorated appearance of Mushakraj looks even more elegant.
              </p>
